--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -54,8 +54,8 @@ jobs:
           haxelib install hxCodec
           haxelib install hxjsonast
           haxelib install hscript
-          haxelib install SScript
-          haxelib install flxanimate
+          haxelib git SScript https://github.com/mayo78/SScript
+          haxelib git flxanimate https://github.com/beihu235/flxanimate
           haxelib git linc_luajit https://github.com/mcagabe19-stuff/linc_luajit-rewriten
           haxelib install extension-androidtools
           haxelib install hxcpp-debug-server
