--- a/.github/workflows/m.yml
+++ b/.github/workflows/m.yml
@@ -46,10 +46,10 @@ jobs:
           haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp.git
           haxelib git lime https://github.com/mcagabe19-stuff/lime-8.2.1.git
           haxelib install openfl
-          haxelib install flixel 5.6.0
+          haxelib install flixel 5.5.0
           haxelib install flixel-tools
           haxelib install flixel-ui
-          haxelib install flixel-addons 3.2.0
+          haxelib install flixel-addons
           haxelib install tjson
           haxelib install hxCodec
           haxelib install hxjsonast
@@ -68,9 +68,8 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_LATEST_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME_17_X64
           haxelib run lime config ANDROID_SETUP true
-          haxelib set flixel 5.6.0
-          haxelib set flixel-addons 3.2.0
-      
+          haxelib set flixel 5.5.0
+          
       - name: Compile
         run: haxelib run lime build android
       
